# Linux-Hello

./: .gitignore  CAMERA_DIAGNOSTIC.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  FINAL_REPORT.md  GUIDE_CAMERA_TESTS.md  GUI_DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  MANIFEST.md  Makefile  PERFORMANCE_REPORT.md  PHASE_3_3_COMPLETION.md  PHASE_3_3_FINAL_SIGNATURE.md  PHASE_3_3_SUMMARY.md  PHASE_3_4_COMPLETION.md  PHASE_3_4_COMPLETION_SUMMARY.md  PHASE_3_4_FINAL_STATUS.md  PHASE_3_COMPLETION.md  PHASE_B_SUMMARY.md  PROJECT_INVENTORY.md  README.md  SCREENLOCK_INTEGRATION.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PHASE_3_3.md  SETUP_COMPILE_TEST.md  STATUS.md  STATUS_PHASE_3_3.md  TEST_REPORT.py  TEST_RESULTS.md  TEST_RESULTS_PHASE_3_4.md  clippy.toml  export_onnx.py  install-pam.sh  linux-hello.desktop  overview.sh  prepare-pam-test.sh  pyproject.toml  rustfmt.toml  (+14 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-debian.yml  ci.yml  docs.yml  quality.yml  release.yml  (+1 more)
debian/: KDE_INTEGRATION.md  changelog  control  enable-pam-face-recognition.sh  install  kde-setup.sh  linux-hello-daemon.8  linux-hello-gui.install  linux-hello.install  linux-hello.pam  linux-hello.service  pam-linux-hello  postinst  postrm  prerm  rules
hello_daemon/: Cargo.toml
linux_hello_config/: Cargo.toml  README.md  build.rs
linux_hello_config/src/: CMakeLists.txt  button_builder.rs  button_state.rs  config.rs  dbus_client.rs  gui_integration_tests.rs  main.rs  main_iced.rs.bak  performance_tests.rs  preview.rs  qml_launcher.cpp  render_cache.rs  streaming.rs  ui.rs
pam_linux_hello/: Cargo.toml
pam_module/: Cargo.toml
po/: ar.po  de.po  en.po  es.po  fr.po  it.po  ja.po  pt.po  ru.po  zh_CN.po
rust-daemon/: Cargo.toml  IMPLEMENTATION.md  README.md
rust-daemon/src/: main.rs
rust-daemon/src/camera/: mod.rs
rust-daemon/src/config/: mod.rs
rust-daemon/src/embeddings/: mod.rs
rust-daemon/src/socket/: mod.rs
scripts/: version.sh
src/: linux-hello-daemon
(+49 files in other folders)
