[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/linux_hello/_version.py"
version_scheme = "guess-next-simple"
fallback_version = "1.0.0"

[project]
name = "linux-hello"
dynamic = ["version"]
description = "Linux Hello – Authentification faciale locale"
requires-python = ">=3.10"
dependencies = [
    "click",
    "insightface",
    "onnxruntime",
    "numpy",
]

[project.scripts]
hello = "linux_hello.cli:cli"
linux-hello-daemon = "linux_hello.daemon:main"
